Add FRONT_URL variable to docker-compose
* Add django-allauth to requirements

--- a/docker-compose-tests.yml
+++ b/docker-compose-tests.yml
@@ -15,6 +15,7 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_HOST=postgres
       - POSTGRES_PORT=5432
+      - FRONT_URL=https://nombadbooks.io
     user: "${UID:?You must do 'export UID' to launch}"
     volumes:
       - ./:/code
