--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,7 @@ services:
       - DEBUG=true
       - DJANGO_SETTINGS_MODULE=project.settings.base
       - ALLOWED_HOSTS=*
-      - POSTGRES_DB=nomadbooks
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_HOST=postgres
-      - POSTGRES_PORT=5432
+      - DATABASE_URL=postgres://postgres:postgres@postgres:5432/nomadbooks
       - FRONT_URL=https://nombadbooks.io
     ports:
       - "5000:5000"
