--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+services:
+  - docker
+
 env:
   - DOCKER_COMPOSE_VERSION=2.4
 
@@ -10,7 +13,7 @@ before_install:
 jobs:
   include:
     - stage: test
-      script: /usr/local/bin/docker-compose -f docker-compose-tests.yml up --build --exit-code-from app
+      script: docker-compose -f docker-compose-tests.yml up --build --exit-code-from app
     - stage: deploy
       deploy:
         on:
