Add actual jobs

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-sudo: required
-
 services:
   - docker
 
@@ -15,16 +13,16 @@ before_install:
 script:
   - docker version
   - docker-compose version
-  - echo $HEROKU_APP_NAME
-#jobs:
-#  include:
-#    - stage: test
-#      script: docker-compose -f docker-compose-tests.yml up --build --exit-code-from app
-#    - stage: deploy
-#      deploy:
-#        on:
-#          branch: master
-#        provider: heroku
-#        api_key:
-#          secure: $HEROKU_API_KEY
-#        app: $HEROKU_APP_NAME
+
+jobs:
+  include:
+    - stage: test
+      script: docker-compose -f docker-compose-tests.yml up --build --exit-code-from app
+    - stage: deploy
+      deploy:
+        on:
+          branch: master
+        provider: heroku
+        api_key:
+          secure: $HEROKU_API_KEY
+        app: $HEROKU_APP_NAME
