--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,13 @@ services:
 
 env:
   - DOCKER_COMPOSE_VERSION=1.22.0
+  - PORT=5000
 
 before_install:
   - sudo rm /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
-
-script:
-  - docker version
-  - docker-compose version
 
 jobs:
   include:
