--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ services:
 
 env:
   - DOCKER_COMPOSE_VERSION=1.22.0
-  - PORT=5000
 
 before_install:
   - sudo rm /usr/local/bin/docker-compose
@@ -14,7 +13,11 @@ before_install:
 jobs:
   include:
     - stage: test
-      script: docker-compose -f docker-compose-tests.yml up --build --exit-code-from app
+      script: UID=root docker-compose -f docker-compose-tests.yml up
+        --no-color
+        --renew-anon-volumes
+        --abort-on-container-exit
+        --exit-code-from app
     - stage: deploy
       deploy:
         on:
