--- a/docker-compose-tests.yml
+++ b/docker-compose-tests.yml
@@ -3,6 +3,8 @@ services:
   app:
     build:
       context: .
+      args:
+        PORT: 5000
     depends_on:
       - postgres
     environment:
