--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ jobs:
   include:
     - stage: test
       script: docker-compose up
+        --build
         --no-color
         --renew-anon-volumes
         --abort-on-container-exit
