--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 jobs:
   include:
     - stage: test
-      script: docker-compose up -f docker-compose-test.yml
+      script: docker-compose -f docker-compose-test.yml up
         --no-color
         --renew-anon-volumes
         --abort-on-container-exit
