Integrating travis-ci (#8)
* Add FRONT_URL variable to docker-compose

* Add django-allauth to requirements

* Replace postgres variables with DATABASE_URL

* Add heroku pipeline

* Update Dockerfile

* Expose port in dockerfile

* Remove dynamic number of workers

* Fix error with busybox

* Limit number of workers

* Add travis-ci

* Update docker-compose invoke

* Add docker to services

* Test docker-compose installation

* Update docker-compose version

* Add actual jobs

* Add PORT variable

* Remove entrypoint override

* Update test stage

* Remove user

* Update docker-compose version

* Add PORT arg

* Update docker-compose

Just testing if replacing will work

* Set default value of PORT argument

* Add build option to travis pipeline

* Remove port proxy in docker-compose

* Update docker-compose files

* Replace them again

* Fix command

* Update travis.yml

* Add stages field

* Move docker-compose installation to test stage

* Update stage run conditions

--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -1,8 +1,11 @@
 version: "2.4"
+
 services:
-  app:
+  django:
     build:
       context: .
+      target: dev
+    restart: always
     depends_on:
       - postgres
     environment:
@@ -10,18 +13,11 @@ services:
       - DEBUG=true
       - DJANGO_SETTINGS_MODULE=project.settings.test
       - ALLOWED_HOSTS=*
-      - POSTGRES_DB=nomadbooks
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_HOST=postgres
-      - POSTGRES_PORT=5432
-    user: "${UID:?You must do 'export UID' to launch}"
-    volumes:
-      - ./:/code
-    working_dir: /code
-    entrypoint: ""
+      - DATABASE_URL=postgres://postgres:postgres@postgres:5432/nomadbooks
+      - FRONT_URL=https://nombadbooks.io
     command: /app/scripts/run_tests.sh
   postgres:
+    restart: always
     image: postgres:10.6
     environment:
       - POSTGRES_DB=nomadbooks
