--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,7 @@ services:
   django:
     build:
       context: .
-      target: prod
-    restart: always
     container_name: nomadbooks_django
-    image: django
     depends_on:
       - postgres
     environment:
@@ -15,17 +12,14 @@ services:
       - DEBUG=true
       - DJANGO_SETTINGS_MODULE=project.settings.base
       - ALLOWED_HOSTS=*
-      - POSTGRES_DB=nomadbooks
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_HOST=postgres
-      - POSTGRES_PORT=5432
+      - DATABASE_URL=postgres://postgres:postgres@postgres:5432/nomadbooks
+      - FRONT_URL=https://nombadbooks.io
+    command: /app/manage.py runserver 0.0.0.0:5000
     ports:
       - "5000:5000"
   postgres:
-    restart: always
-    container_name: nomadbooks_postgres
     image: postgres:10.6
+    container_name: nomadbooks_postgres
     environment:
       - POSTGRES_DB=nomadbooks
       - POSTGRES_PASSWORD=postgres
