--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: .
       target: dev
+    mem_limit: 300m
+    mem_reservation: 100m
     restart: always
     depends_on:
       - postgres
