--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -20,6 +20,7 @@ services:
       - AWS_ACCESS_KEY_ID=access_key_id
       - AWS_SECRET_ACCESS_KEY=secret_access_key
       - AWS_STORAGE_BUCKET_NAME=bucket_name
+      - SENDGRID_API_KEY=api_key
     command: /app/scripts/run_tests.sh
   postgres:
     restart: always
